Address some sonar issues